--- a/src/site/notes/Як щодо сторінки кирилицею?.md
+++ b/src/site/notes/Як щодо сторінки кирилицею?.md
@@ -2,5 +2,5 @@
 {"dg-publish":true,"permalink":"/yak-shhodo-storinki-kiriliczeyu/"}
 ---
 
-
+# А це заголовок сторінки кирилицею
 Погляньмо, як впорається з цим завданням наш плагін.
